# ravia

./: Cargo.toml  README.md
.githooks/: pre-commit
crates/ravia_build/: Cargo.toml
crates/ravia_build/src/: lib.rs
crates/ravia_engine/: Cargo.toml
crates/ravia_engine/src/: engine.rs  lib.rs
crates/ravia_engine/src/ecs/: mod.rs
crates/ravia_engine/src/ecs/component/: mesh.rs
crates/ravia_engine/src/graphics/: gpu.rs  material.rs  mesh.rs  mod.rs  shader.rs  system.rs  texture.rs  uniform.rs
crates/ravia_engine/src/graphics/internal/: camera.rs  gpu.rs  material.rs  mesh.rs  mod.rs  shader.rs  system.rs  texture.rs  transform.rs  uniform.rs
crates/ravia_engine/src/graphics/shaders/: triangle.wgsl
crates/ravia_engine/src/resource/: mod.rs
crates/ravia_engine/src/resource/internal/: error.rs  mod.rs  resource.rs  resource_manager.rs  system.rs
crates/ravia_engine/src/time/: mod.rs
crates/ravia_engine/src/time/internal/: time.rs
crates/ravia_res/: README
crates/ravia_utils/: Cargo.toml
crates/ravia_utils/src/: lib.rs
crates/ravia_utils/src/internal/: mod.rs  obj.rs  resource.rs
examples/ravia_hello_3d/: Cargo.toml  index.html
examples/ravia_hello_3d/src/: lib.rs  main.rs  triangle_tex_perspective.wgsl
examples/ravia_hello_texture/: Cargo.toml  build.rs  index.html
examples/ravia_hello_texture/src/: lib.rs  main.rs  triangle_tex.wgsl
examples/ravia_hello_triangle/: Cargo.toml  build.rs  index.html
examples/ravia_hello_triangle/src/: lib.rs  main.rs  triangle.wgsl
examples/ravia_hello_triangle/src/shaders/: triangle.wgsl
