[package]
name = "ravia_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
log = "0.4.22"
pollster = "0.4.0"
wgpu = "23.0.1"
winit = { version = "0.30.7", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["Window", "Document", "Element"] }
