[package]
name = "ravia_hello_3d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
ravia_engine = { version = "0.1.0", path = "../../crates/ravia_engine" }
ravia_utils = { version = "0.1.0", path = "../../crates/ravia_utils" }
legion = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
wasm-bindgen = "0.2.99"
